# agent

./: call_function.py  config.py  main.py  prompts.py  pyproject.toml  tests.py
calculator/: __init__.py  main.py  tests.py
calculator/pkg/: __init__.py  render.py
functions/: get_file_content.py  get_file_info.py  run_python.py  write_file.py
